[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Scene/Tchat.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="IpEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -149.0
margin_right = 100.0
margin_bottom = -125.0
text = "127.0.0.1"
max_length = 15

[node name="PseudoEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -88.0
margin_right = 100.0
margin_bottom = -64.0
text = "frenetikk"
max_length = 12

[node name="ConnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
text = "connect"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -250.0
margin_right = 512.0
custom_constants/separation = 200

[node name="VBoxContainer1" type="VBoxContainer" parent="HBoxContainer"]
margin_bottom = 250.0
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 200.0
margin_right = 200.0
margin_bottom = 250.0
custom_constants/separation = 20

[node name="Tchat" parent="." instance=ExtResource( 2 )]

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 249.0
margin_top = -101.0
margin_right = 364.0
margin_bottom = -45.0
text = "Start"

[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
